--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@types/node": "20.4.4",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "@types/react-html-parser": "^2.0.2",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "html-react-parser": "^4.2.0",
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
