--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lexical/react": "^0.11.3",
     "@types/node": "20.4.4",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
@@ -16,6 +17,7 @@
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "html-react-parser": "^4.2.0",
+    "lexical": "^0.11.3",
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
