--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@lexical/react": "^0.11.3",
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.2",
+    "@types/body-scroll-lock": "^3.1.0",
     "@types/node": "20.4.4",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "@types/react-html-parser": "^2.0.2",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "html-react-parser": "^4.2.0",
