--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
     "@lexical/react": "^0.11.3",
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.2",
+    "@tiptap/extension-document": "^2.0.4",
+    "@tiptap/extension-highlight": "^2.0.4",
+    "@tiptap/extension-paragraph": "^2.0.4",
+    "@tiptap/extension-text": "^2.0.4",
+    "@tiptap/pm": "^2.0.4",
+    "@tiptap/react": "^2.0.4",
     "@types/body-scroll-lock": "^3.1.0",
     "@types/node": "20.4.4",
     "@types/react": "18.2.15",
