検索ハイライト追加中

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@lexical/react": "^0.11.3",
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.2",
+    "@sereneinserenade/tiptap-extension-search-n-replace": "^2.0.0-beta.3",
     "@tiptap/extension-document": "^2.0.4",
     "@tiptap/extension-highlight": "^2.0.4",
     "@tiptap/extension-paragraph": "^2.0.4",
