--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.0",
     "@lexical/react": "^0.11.3",
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.2",
+    "@mui/x-date-pickers": "^6.12.0",
     "@types/body-scroll-lock": "^3.1.0",
     "@types/draft-js": "^0.11.12",
     "@types/node": "20.4.4",
@@ -21,6 +23,7 @@
     "@types/react-dom": "18.2.7",
     "@types/react-html-parser": "^2.0.2",
     "body-scroll-lock": "^4.0.0-beta.0",
+    "date-fns": "^2.30.0",
     "draft-js": "^0.11.7",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
@@ -29,8 +32,10 @@
     "next": "13.4.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.4",
     "react-icons": "^4.10.1",
     "swr": "^2.2.0",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "zod": "^3.22.2"
   }
 }
