--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.46.1",
     "react-icons": "^4.10.1",
     "swr": "^2.2.0",
     "typescript": "5.1.6"
