--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.1",
     "@lexical/react": "^0.11.3",
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.2",
@@ -30,6 +31,7 @@
     "react-hook-form": "^7.46.1",
     "react-icons": "^4.10.1",
     "swr": "^2.2.0",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "zod": "^3.22.2"
   }
 }
