--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@lexical/react": "^0.11.3",
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.2",
+    "@mui/x-data-grid": "^6.16.2",
     "@types/body-scroll-lock": "^3.1.0",
     "@types/node": "20.4.4",
     "@types/react": "18.2.15",
