--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-config-next": "13.4.12",
     "html-react-parser": "^4.2.0",
     "lexical": "^0.11.3",
+    "lorem-ipsum": "^2.0.8",
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
