--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^3.3.1",
     "@lexical/react": "^0.11.3",
     "@mui/icons-material": "^5.14.1",
+    "@mui/lab": "^5.0.0-alpha.175",
     "@mui/material": "^5.14.2",
     "@mui/x-data-grid": "^6.16.2",
     "@types/body-scroll-lock": "^3.1.0",
@@ -32,6 +33,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
     "react-icons": "^4.10.1",
+    "recoil": "^0.7.7",
     "swr": "^2.2.0",
     "typescript": "5.1.6",
     "zod": "^3.22.2"
