--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/x-data-grid": "^6.16.2",
     "@types/body-scroll-lock": "^3.1.0",
     "@types/node": "20.4.4",
+    "@types/rangy": "^1.3.0",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "@types/react-html-parser": "^2.0.2",
@@ -29,10 +30,12 @@
     "lexical": "^0.11.3",
     "lorem-ipsum": "^2.0.8",
     "next": "13.4.12",
+    "rangy": "^1.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
     "react-icons": "^4.10.1",
+    "react-selection-highlighter": "^2.0.1",
     "recoil": "^0.7.7",
     "swr": "^2.2.0",
     "typescript": "5.1.6",
