--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "react-selection-highlighter": "^2.0.1",
     "recoil": "^0.7.7",
     "swr": "^2.2.0",
-    "typescript": "5.1.6",
     "zod": "^3.22.2"
+  },
+  "devDependencies": {
+    "typescript": "^5.4.5"
   }
 }
