--- a/package.json
+++ b/package.json
@@ -37,5 +37,9 @@
     "swr": "^2.2.0",
     "typescript": "5.1.6",
     "zod": "^3.22.2"
+  },
+  "devDependencies": {
+    "@welldone-software/why-did-you-render": "^8.0.3",
+    "typescript": "^5.4.5"
   }
 }
